<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">文中记词</string>
    <string name="title">登陆英语掌中宝</string>
     <string name="hint_login_username">账号: </string>
     <string name="hint_login_password">密码: </string>
     <string name="bn_login">登陆</string>
     <string name="bn_register">注册</string>
     <string name="okupdate">确定</string>
     <string name="myupdate">信息修改</string>
     <string name="bn_cancel">取消</string>
     <string name="bn_main">我的计划</string>
     <string name="bn_design">设置</string>
     <string name="bn_leave">退出</string>
     <string name="progress">学习记录</string>
     <string name="already_word">查词记录</string>
     <string name="word_explain">单词详解</string>
     <string name="word_remember">单词记忆</string>
     <string name="already_read">阅读记录</string>
     <string name="word_form">查词记录</string>
     <string name="articlenumber">阅读文本数量：</string>
     <string name="sentencenumber">查询单词数量：</string>
     <string name="wordnumber">查询句子数量：</string>
     <string name="txt_word1">else  [els]</string>
    <string name="txt_word2">其他，另外   a.别的</string>     
    <string name="bword_txt">精选例句</string>
     <string name="bword_ctxt">中文释义</string>
     <string name="bword_note">笔记</string>
     <string name="bword_hint">我觉得。。。</string>
     <string name="bn_save">保存</string>
     <string name="bn_share">分享</string>
     <string name="ck1">四级词汇</string>
      <string name="ck2">六级词汇</string>
      <string name="ck3">雅思词汇</string>
      <string name="ck4">考研词汇</string>
      <string name="ck5">托福词汇</string>
      <string name="ck6">热门词汇</string>
      <string name="go_to_study">开始学习</string>
      <string name="study1">单词记忆</string>
      <string name="study2">阅读文章</string>
      <string name="study3">视频学习</string>
     <string name="bn_video">视频学习</string>
     <string name="video1">视频1</string>
     <string name="video2">视频2</string>
      <string name="my_article">亲，专属您的文章</string>
      <string name="my_video">亲，专属您的视频</string>
       <string name="bn_cancal">取消</string>
        <string name="login_cb">记住密码</string>
        <string name="login_auto">自动登录</string>
        <string name="alreadyvideo">视频记录</string>
         <string name="mydata">我的词库</string>
          <string name="choice">选择词库</string>
          <string name="information">修改信息</string>
      <string name="myshare">我的笔记</string>
      <string name="mypicture">上传图像</string>
      <string name="exit">退出账号</string>
       <string name="mynote">我的笔记</string>
       <string name="bn_ok">完成阅读</string>
       <string name="not_know">不认识</string>
       <string name="know">认识</string>
        <string name="not_remember">没想起来</string>
       <string name="remember">想起来</string>
       <string name="up">上一个</string>
       <string name="next">下一个</string>
       
       
        <string name="rule">计分规则</string>
       <string name="score3">3分：</string>
       <string name="score3_rule">看到单词，就能想起中文含义</string>
       <string name="score2">2分：</string>
       <string name="score2_rule">在语境中看到单词，能想起中文含义</string>
       <string name="score1">1分：</string>
       <string name="score1_rule">看到单词和中文解释，能想起 曾经学习过</string>
       <string name="score0">0分：</string>
       <string name="score0_rule">看到单词和中文解释，毫无印象</string>
       <string name="about">关于APP</string>
         <string name="version">版本号：1.0</string>
          <string name="publish_time">发布时间:2015年5月20日</string>
           <string name="developers">开发者：高爽、武珍、张峰毅</string>
           <string name="ip">IP地址:</string>
           <string name="dlzh">登录帐号：</string>
           <string name="dlmm">登录密码：</string>
           <string name="qrmm">确认密码：</string>
       
      
</resources>