<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/grey1">
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@color/blue"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp" />

         <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:layout_centerInParent="true" />
          
       </RelativeLayout>
            
       <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logob"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp" />
    	
    	<View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
             android:background="@color/white"/>
    	
        <TextView
                android:id="@+id/textView0"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/version"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:textColor="@color/grey3" />
        	
        	<View
            	android:layout_width="fill_parent"
            	android:layout_height="0.5dp"
             	android:background="@color/white"/>
        	
          <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/publish_time"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:textColor="@color/grey3" />
        
          
    		<View
            	android:layout_width="fill_parent"
            	android:layout_height="0.5dp"
            	android:background="@color/white"/>
    		
     		<TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/developers"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:textColor="@color/grey3" />
     		
</LinearLayout>