<?xml version="1.0" encoding="utf-8"?>

<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_Layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey1"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:id="@+id/Layout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical" >
   
     	<View
            android:layout_width="fill_parent" 
            android:layout_height="20dp"/>
     
    <LinearLayout
         android:id="@+id/Layout2"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        android:orientation="horizontal" >

       
        <ImageView
            android:id="@+id/imageback"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/person" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="28sp" />
       
       </LinearLayout>
        <View
            android:layout_width="fill_parent" 
            android:layout_height="20dp"/>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >
         <View
            android:layout_width="fill_parent" 
            android:layout_height="10dp"/>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@color/white"
        android:orientation="horizontal" > 
   		
   		<View
            android:layout_width="20dp" 
            android:layout_height="fill_parent"/>
   
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/choice1" />
        
       <View
            android:layout_width="10dp" 
            android:layout_height="fill_parent"/>
       
       <TextView
            android:id="@+id/mydata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mydata"
            android:textSize="28dp"
             android:layout_gravity="center_vertical"
            android:textColor="@color/grey3" />
       
         </LinearLayout>
         
          <View
            android:layout_width="fill_parent" 
            android:layout_height="10dp"/>
          
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >
       
           <View
            android:layout_width="80dp" 
            android:layout_height="fill_parent"/>  
            
        <TextView
            android:id="@+id/myword"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:textSize="26dp"
            android:paddingLeft="7dp"
            android:textColor="@color/white"
            android:background="@drawable/book_back"
            android:paddingTop="15dp"    />

        
      </LinearLayout>  
      </LinearLayout>  
        <View
            android:layout_width="fill_parent" 
            android:layout_height="20dp"/>
       

	 <RelativeLayout
      	android:id="@+id/Layout_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >
       
       <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/choice2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp" />
       	
         <TextView
            android:id="@+id/choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice"
            android:textSize="28sp"
            android:textColor="@color/grey3"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp" />
         
       <ImageView
            android:id="@+id/imageViewa"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/img1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp" />
       
      </RelativeLayout>
       
       <View
            android:layout_width="fill_parent" 
            android:layout_height="10dp"
             android:background="@color/white"/>
       
       <LinearLayout
           android:id="@+id/lay_choice"  
           android:layout_width="fill_parent"
           android:layout_height="120dp"
           android:visibility="gone"
           android:background="@color/white"
           android:orientation="vertical" >
        
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="40dp"
        	android:background="@color/white"
        	android:layout_marginTop="10dp"
        	android:orientation="horizontal" >
        
        <Button
            android:id="@+id/ck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck1" 
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white"
            android:layout_marginLeft="95dp" />
        
        <Button
            android:id="@+id/ck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck2" 
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white"
            android:layout_marginLeft="30dp" />
        
        <Button
            android:id="@+id/ck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck3" 
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white"
            android:layout_marginLeft="30dp" />
        
        </LinearLayout>
         
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >
        
        <View
            android:layout_width="95dp" 
            android:layout_height="fill_parent"/>
        
        <Button
            android:id="@+id/ck4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck4" 
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white" />
        
         <View
            android:layout_width="30dp" 
            android:layout_height="fill_parent"/>
         
        <Button
            android:id="@+id/ck5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck5" 
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white" />
        
         <View
            android:layout_width="30dp" 
            android:layout_height="fill_parent"/>
         
        <Button
            android:id="@+id/ck6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ck6"
            android:textSize="23dp"
            android:textColor="@color/blue"
            android:background="@color/white" />
        
         </LinearLayout>
         
  	</LinearLayout>
    
 </LinearLayout>

        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="100dp"
        	android:background="@color/white"
        	android:layout_gravity="bottom"
        	android:gravity="center"
        	android:orientation="horizontal" >
  
  		<Button
            android:id="@+id/main_page"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ck2" />
        
  		<View
            android:layout_width="150dp" 
            android:layout_height="fill_parent" />
  
        <Button
            android:id="@+id/study_page"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/study1" />
        
         <View
            android:layout_width="150dp" 
            android:layout_height="fill_parent" />
  
        
        <Button
            android:id="@+id/setup_page"
            android:layout_width="70dp"
            android:layout_height="70dp"
           android:background="@drawable/setup1" />
        
          </LinearLayout>
    
    
    
</FrameLayout>